--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,13 @@
 = Cypher on Spark experiment
 
 Talk to the openCypher team if you have questions.
+
+
+=== Setting it up on Spark
+
+1. Build the JAR for this project `mvn clean package`.
+2. Deploy the JAR (the standalone one) into the `jars` directory of your Spark installation.
+3. Start the Spark master.
+4. Start Spark workers (at least one).
+5. Run application with the master URL as argument.
+** `scala -classpath target/cypher-on-spark-1.0-SNAPSHOT-standalone-shell.jar org.opencypher.spark.benchmark.Benchmark`
