--- a/README.adoc
+++ b/README.adoc
@@ -10,4 +10,4 @@ Talk to the openCypher team if you have questions.
 3. Start the Spark master.
 4. Start Spark workers (at least one).
 5. Run application with the master URL as argument.
-** `scala -classpath target/cypher-on-spark-1.0-SNAPSHOT-standalone-shell.jar org.opencypher.spark.benchmark.Benchmark`
+** `scala -classpath target/cypher-on-spark-1.0-SNAPSHOT-standalone-shell.jar org.opencypher.spark.benchmark.RunBenchmark`
