Added instructions to README for installing graphframes

--- a/README.adoc
+++ b/README.adoc
@@ -2,6 +2,20 @@
 
 Talk to the openCypher team if you have questions.
 
+=== Installing GraphFrames
+
+This project requires the _manual_ installation of graph frames.
+
+* Get graphframes from github (https://github.com/graphframes/graphframes)
+* Append the following line to build.sbt: `publishTo := Some(Resolver.file("file",  new File(Path.userHome.absolutePath+"/.m2/repository")))`
+* Run: `make 2.1.0`
+* This will provide you with a zip of the required artifacts. Either use sbt to install them or copy them manually to your $HOME.m2.
+
+And the end of this, your local maven cache should contain:
+
+* `~/.m2/repository/default/graphframes_2.11/0.4.0-SNAPSHOT-spark2.1/graphframes_2.11-0.4.0-SNAPSHOT-spark2.1.jar`
+* `~/.m2/repository/default/graphframes_2.11/0.4.0-SNAPSHOT-spark2.1/graphframes_2.11-0.4.0-SNAPSHOT-spark2.1.pom`
+
 === Setting it up on Spark
 
 ==== Neo4j
