--- a/licensecheck-config/README.adoc
+++ b/licensecheck-config/README.adoc
@@ -13,33 +13,7 @@ We accept these as they are distributed to us through Spark.
 
 When a dependency is added or removed, the license listings need to be updated.
 The check is done via Maven, tied to the `compile` phase*.
-To make the tool generate new listings instead of comparing to the checked-in lists, add the `-Doverwite` parameter:
-
-```
-mvn compile -Doverwrite
-```
-
-*This is necessary because the configuration module must be compiled for an updated configuration to be available (if a new liked license is added).
-It would otherwise have been sufficient with `validate` phase.
-
-## Configuration
-
-The file [# License check configuration
-
-The plugin used is found here: https://github.com/neo4j/licensing-maven-plugin
-
-The plugin checks all dependencies and groups them by license.
-This module hosts the configuration, which is given to the plugin as a dependency.
-Most open source licenses are allowed, https://www.apache.org/licenses/GPL-compatibility.html[with the notable exception of GPL].
-
-Apache Spark does bundle a number of GPL-licensed modules; most are dual-licensed with CDDL.
-We accept these as they are distributed to us through Spark.
-
-## Usage
-
-When a dependency is added or removed, the license listings need to be updated.
-The check is done via Maven, tied to the `compile` phase*.
-To make the tool generate new listings instead of comparing to the checked-in lists, add the `-Doverwite` parameter:
+To make the tool generate new listings instead of comparing to the checked-in lists, add the `-Doverwrite` parameter:
 
 ```
 mvn compile -Doverwrite
