--- a/documentation/asciidoc/examples/caps/census-sql-hive.adoc
+++ b/documentation/asciidoc/examples/caps/census-sql-hive.adoc
@@ -1,5 +1,5 @@
 [[example-census-sql-hive]]
-= Example: Census SQL graph source example using Hive
+= Census SQL graph source example using Hive
 
 [source, scala]
 ----
