--- a/documentation/asciidoc/examples/caps/census-sql-jdbc.adoc
+++ b/documentation/asciidoc/examples/caps/census-sql-jdbc.adoc
@@ -1,5 +1,5 @@
 [[example-census-sql-jdbc]]
-= Example: Census SQL graph source example using JDBC
+= Census SQL graph source example using JDBC
 
 [source, scala]
 ----
