--- a/documentation/asciidoc/examples/caps/northwind-sql-jdbc.adoc
+++ b/documentation/asciidoc/examples/caps/northwind-sql-jdbc.adoc
@@ -1,5 +1,5 @@
 [[example-northwind-sql-jdbc]]
-= Example: Northwind SQL graph source example using JDBC
+= Northwind SQL graph source example using JDBC
 
 [source, scala]
 ----
