--- a/documentation/asciidoc/introduction.adoc
+++ b/documentation/asciidoc/introduction.adoc
@@ -196,7 +196,7 @@ CAPS uses Sparks' `BinaryType` to represent identifiers internally.
 Identifiers uniquely identify nodes and relationships, as well as start and end nodes for relationships.
 During the creation of a `CAPSNodeTable` or a `CAPSRelationshipTable`, we automatically convert the specified identifier columns to `BinaryType`.
 At the moment, the conversion is supported for `LongType`, `IntegerType` and `StringType`.
-If your identifier has a different data type, you need to convert it to one of the supported types before a CAPS table.
+If your identifier has a different data type, you need to convert it to one of the supported types before creating a CAPS table.
 
 Using this mechanism, you can re-use identifiers that you might already have, e.g. in a CSV file or a relational table.
 Note, that node identifiers must be unique within the set of all nodes and relationship identifiers must be unique within the set of all relationships.
