--- a/documentation/asciidoc/backends.adoc
+++ b/documentation/asciidoc/backends.adoc
@@ -3,12 +3,21 @@
 
 [abstract]
 --
-Placeholder abstract.
+This chapter documents the CAPS session, catalog and backends.
 --
 
-// TODO: This page is empty, consider adding inline TOC or introductory blurb.
-// TODO: Make the sidebar TOC show an additional level for these nested sections.
 // TODO: Consider folding session+catalog into in-memory backend.
+
+Using CAPS, graphs can be created from one or more backends, queried with Cypher, and optionally persisted back to one or more backends.
+A CAPS application performs work through a <<caps-session, CAPS Session>>.
+The session maintains references to one or more graphs in a _Catalog_.
+
+The following backends are supported in CAPS and can be used in a CAPS application:
+
+* <<backend-in-memory, In-memory backend>>
+* <<backend-filesystem, Filesystem backend>>
+* <<backend-neo4j, Neo4j backend>>
+* <<backend-sql, SQL backend>>
 
 include::session-catalog.adoc[leveloffset=+1]
 
