--- a/documentation/asciidoc/overview.adoc
+++ b/documentation/asciidoc/overview.adoc
@@ -3,14 +3,14 @@
 
 [abstract]
 --
-Placeholder abstract.
+This chapter provides an overview of CAPS components: Property Graph Data Source backends and the Cypher graph query language.
 --
 
 
 [[caps-components]]
 == Components
 
-Cypher for Apache Spark is made up of Property Graph Data Sources (PGDSs) -- software components for loading and saving graphs from various locations -- and Cypher.
+Cypher for Apache Spark is made up of Property Graph Data Sources (PGDSs) -- software components for loading and saving graphs from various locations -- and the Cypher graph query language.
 
 
 [[introduction-pgds]]
