--- a/documentation/asciidoc/resources.adoc
+++ b/documentation/asciidoc/resources.adoc
@@ -1,6 +1,12 @@
 [[resources]]
 = Resources
 
+[abstract]
+--
+This chapter contains a list of resources for further reading.
+--
+
+
 CAPS starter project::
 A thin Maven project setup intended for users to get up and running with CAPS in minimal time:
 https://github.com/opencypher/caps-examples
