Tweak abstracts and inline TOC
Don't chunk GraphMerge and GraphDDL content onto their own pages.
They would not be visible in TOC, only through prev/next navigation and
cross-references, and users might miss them.

--- a/documentation/asciidoc/backend-in-memory.adoc
+++ b/documentation/asciidoc/backend-in-memory.adoc
@@ -3,7 +3,7 @@
 
 [abstract]
 --
-Placeholder abstract.
+This section describes the in-memory backend for CAPS.
 --
 
 // TODO: Document the in-memory backend, possibly together with or instead of session and catalog.
