--- a/documentation/asciidoc/index.adoc
+++ b/documentation/asciidoc/index.adoc
@@ -8,10 +8,10 @@ This part provides comprehensive documentation for Cypher for Apache Spark.
 
 The Cypher for Apache Spark part of the Morpheus user guide covers the following areas:
 
-* <<caps-overview>> -- Overview of CAPS components: Property Graph Data Source backends and the Cypher graph query language.
+* <<caps-overview>> -- Overview of CAPS components: Property Graph Data Source backends and Cypher.
 * <<caps-introduction>> -- Introduction with examples to CAPS concepts and APIs.
 * <<backends>> -- Detailed documentation of the CAPS Session and the various CAPS backends.
-* <<cypher>> -- Detailed documentation of the Cypher graph query language as implemented in CAPS; its features and limitations.
+* <<cypher>> -- Features and limitations of the Cypher graph query language as implemented in CAPS.
 * <<performance>> -- Notes on caching and performance.
 * <<architecture>> -- Notes on CAPS architecture and technology choices.
 * <<resources>> -- Resources for further reading.
