--- a/documentation/asciidoc/introduction.adoc
+++ b/documentation/asciidoc/introduction.adoc
@@ -10,7 +10,7 @@ This chapter introduces CAPS concepts and APIs, and gives examples for getting s
 // TODO: Move code to somewhere testable.
 
 When you start off with Cypher for Apache Spark, this is probably the very first thing you will do, unless you are importing a graph from Neo4j.
-This section describes how to take CSV files, relations, or any "data squares" and turn them into graphs which can be queried in CAPS.
+This section describes how to take CSV files, relations, or other tabular data and turn them into graphs which can be queried in CAPS.
 
 To create a CAPS graph, follow these steps:
 
@@ -82,7 +82,7 @@ This means that CAPS can generate identifiers for nodes and relationships on the
 
 * Every table must have a column with a unique ID.
 * The unique ID must be a 64-bit integer (string IDs are presently not supported).
-* The ID spaces of nodes/relationships can overlap, but within each entity type the IDs *cannot* be reused.
+* The ID space of nodes can overlap with that of relationships, but within each space the ID must be unique.
 
 
 [[graphs-from-tables-normalization]]
@@ -120,9 +120,8 @@ This allows to define different properties for `:Customer` and `:Employee`.
 
 Given a set of tables, there are two ways to convert them to a graph:
 
-* Manually with the Scala API
-
-* Using the SQL PGDS with a Graph DDL
+* Manually with the <<graph-from-tables-scala-api, Scala API>>
+* Using the SQL PGDS with a <<graph-from-tables-graph-ddl, Graph DDL>>
 
 If the data is already in the "tables for labels" format and contains unique identifiers, then using the Scala API is simpler.
 If the data is denormalised and does not contain unique identifiers, then we recommend using the Graph DDL.
